MCA App/Release/MCA Dev Org/src/objects/Bounce_Fees_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Error Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Fees Setting</label>
    <nameField>
        <displayFormat>BFS-{0000}</displayFormat>
        <label>Bounce Fee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>